Changed solvePnP to solveP3P. Choosing the nearest solution from the results.